# urdf_colored_link

./: CMakeLists.txt  LICENSE  README.md  colored_link.urdf.xacro  inertials.urdf.xacro  package.xml  simple_link.urdf.xacro
docs/: README.md
example/: box.urdf.xacro  example.launch  example.rviz  simple_box.urdf.xacro
