<?xml version="1.0"?>
<package format="2">
  <name>urdf_juggle</name>
  <version>0.3.1</version>
  <description>Helpfull Xacro macroses for URDF</description>

  <maintainer email="standmit@zabstrannik.ru">Andrey Stepanov (standmit)</maintainer>

  <license>MIT</license>

  <author email="standmit@zabstrannik.ru">Andrey Stepanov (standmit)</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
